syntax = "proto3";

package nekzabirov.igambling.v1;

option java_package = "com.nekzabirov.igambling.proto.service";
option java_multiple_files = true;

import "dto/collection.dto.proto";
import "dto/empty.result.proto";

service Collection {
  rpc AddCollection(AddCollectionCommand) returns (EmptyResult);

  rpc UpdateCollection(UpdateCollectionCommand) returns (EmptyResult);

  rpc AddGameCollection(AddGameCollectionCommand) returns (EmptyResult);

  rpc ChangeGameOrder(ChangeGameOrderCollectionCommand) returns (EmptyResult);

  rpc RemoveGameFromCollection(AddGameCollectionCommand) returns (EmptyResult);

  rpc List(ListCollectionCommand) returns (ListCollectionResult);
}

message AddCollectionCommand {
  string identity = 1;

  map<string, string> name = 2;
}

message UpdateCollectionCommand {
  string identity = 1;

  map<string, string> name = 2;

  int32 order = 3;

  bool active = 4;
}

message AddGameCollectionCommand {
  string identity = 1;

  string gameIdentity = 2;
}

message ChangeGameOrderCollectionCommand {
  string identity = 1;

  string gameIdentity = 2;

  int32 order = 3;
}

message ListCollectionCommand {
  string query = 1;

  optional bool active = 2;

  int32 page_number = 3;

  int32 page_size = 4;
}

message ListCollectionResult {
  message Item {
    CollectionDto collection = 1;

    int32 active_games = 2;

    int32 total_games = 3;
  }

  repeated Item items = 1;

  int32 total_page = 2;
}